@@ -3,6 +3,7 @@
 import copy
 import json
 import logging
+from typing import List
 
 from ops.framework import (
     EventBase, EventSource, Object, ObjectEvents, StoredState
@@ -77,6 +78,11 @@ class Slurmd(Object):
         # send the hostname and port to enable configless mode
         app_relation_data["slurmctld_host"] = self._charm.hostname
         app_relation_data["slurmctld_port"] = self._charm.port
+
+    def set_list_of_accounted_nodes(self, nodes: List[str]):
+        """Set list of accounted for nodes in the app relation data."""
+        for relation in self._charm.framework.model.relations["slurmd"]:
+            relation.data[self.model.app]["unit_hostnames"] = json.dumps(nodes)
 
     def _on_relation_changed(self, event):
         """Emit slurmd available event."""
