@@ -7,6 +7,8 @@ This file keeps track of all notable changes to the Slurm Charms.
 Unreleased
 ----------
 
+- fix race condition on inventory synchronization between slurmd and slurmctld
+  before starting slurmd
 - fix breakage in charms when the slurmd leader is removed
 - remove unused code in slurmd peer relation
 - fix slurmd action to query infiniband version
